--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -18,20 +18,17 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" th:href="@{/register}">Register</a>
+        <a sec:authorize="!isAuthenticated()" class="nav-link" th:href="@{/register}">Register</a>
       </li>
       <li class="nav-item active">
         <a sec:authorize="!isAuthenticated()" class="nav-link" th:href="@{/login}">Login</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" th:href="@{/users}">Users</a>
+        <a sec:authorize="isAuthenticated()" class="nav-link" th:href="@{/all-users}">Users</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" th:href="@{/vote}">Vote!</a>
+        <a sec:authorize="isAuthenticated()" class="nav-link" th:href="@{/vote}">Vote!</a>
       </li >
-      <li class="position-absolute top-0 end-0">
-        <a sec:authorize="isAuthenticated()" th:text="${user.email}"></a>
-      </li>
       <li class="position-absolute top-0 end-0">
         <a sec:authorize="isAuthenticated()" th:href="@{/logout}" class="nav-link">Logout</a>
       </li>
