--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
-      th:replace="~{base::layout(~{::section})}">
+      th:replace="~{base::layout(~{::section})}" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="UTF-8">
   <title>LogIn</title>
 </head>
 <body>
 <section>
-  <div class="container">
+  <div class="container" >
     <div class="row">
       <div class="col-md-6 offset-md-3">
         <div th:if="${param.error}">
@@ -26,6 +26,7 @@
                   role="form"
                   th:action="@{/login}"
                   class="form-horizontal">
+
               <div class="form-group">
                 <label for="email">Email address</label>
                 <input
@@ -34,7 +35,7 @@
                         class="form-control"
                         id="email"
                         aria-describedby="emailHelp"
-                        placeholder="Enter email">
+                        placeholder="Enter email"/>
               </div>
               <div class="form-group">
                 <label for="password">Password</label>
@@ -43,12 +44,12 @@
                         name="password" required
                         class="form-control"
                         id="password"
-                        placeholder="Password">
+                        placeholder="Password"/>
               </div>
               <div class="form-group">
                 <button type="submit" class="btn btn-primary" value="Log in">Login</button>
                 <span> Not registered ?
-                  <a th:href="@{/register}">Register here</a>
+                  <a th:href="@{/register}" sec:authorize="!isAuthenticated()">Register here</a>
                 </span>
               </div>
             </form>
