--- a/src/main/resources/templates/registerCandidate.html
+++ b/src/main/resources/templates/registerCandidate.html
@@ -21,7 +21,7 @@
                     </div>
                     <div class="card-body">
                         <form
-                                th:action="@{/registerCandidate/save}"
+                                th:action="@{/registerCandidate}"
                                 th:object="${candidate}"
                                 method="post"
                                 role="form">
