--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -27,6 +27,9 @@
         <a sec:authorize="isAuthenticated()" class="nav-link" th:href="@{/all-candidates}">Vote here!</a>
       </li>
       <li class="nav-item active">
+        <a sec:authorize="isAuthenticated()" class="nav-link" th:href="@{/all-users}">Users</a>
+      </li>
+      <li class="nav-item active">
         <a sec:authorize="isAuthenticated()" class="nav-link" th:href="@{/registerCandidate}">Register candidature</a>
       </li >
       <li class="nav-item active">
